[package]
name = "summercash"
version = "0.1.0"
authors = ["Dowland Aiello <mitsukomegumii@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
num = { version = "0.2.0", features = ["serde"] }
hex = "0.3.2"
blake2 = "0.8.0"
rand = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.1"
serde_json = "1.0.40"
failure = "0.1.5"
sled = "0.24.1"
path-clean = "0.1.0"
bincode = "1.1.4"
libp2p = "0.11.0"
walkdir = "2"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"
features = ["serde"]

[lib]
name = "summercash"
path = "src/lib.rs"

[[bin]]
name = "summercash"
path = "src/main.rs"