[package]
name = "summercash"
version = "0.1.0"
authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
num = { version = "0.2.1", features = ["serde"] }
hex = "0.4.0"
blake3 = "0.1.0"
rand = "0.7.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.3"
serde_json = "1.0.44"
failure = "0.1.6"
sled = "0.30.3"
path-clean = "0.1.0"
bincode = "1.2.1"
libp2p = "0.14.0-alpha.1"
walkdir = "2"
futures = "0.3.1"
tokio = "0.2.9"
log = "0.4"
clap = { git = "https://github.com/clap-rs/clap" } 

[dependencies.ed25519-dalek]
version = "1.0.0-pre.3"
features = ["serde"]

[lib]
name = "summercash"
path = "src/lib.rs"

[[bin]]
name = "smcd"
path = "src/main.rs"
