[package]
name = "summercash"
version = "0.1.0"
authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
num = { version = "0.2.1", features = ["serde"] }
blake3 = "0.1.0"
rand = "0.7.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.3"
serde_json = "1.0.44"
failure = "0.1.6"
sled = "0.30.3"
path-clean = "0.1.0"
bincode = "1.2.1"
libp2p = "0.15.0"
walkdir = "2"
futures = { version = "0.3.1", features = ["default", "compat"] }
tokio = { version = "0.2.9", features = ["full"] }
log = "0.4"
clap = { git = "https://github.com/clap-rs/clap" } 
env_logger = "0.7.1"
jsonrpc-core = "14.0.5"
jsonrpc-http-server = "14.0.5"
jsonrpc-derive = "14.0.5"
jsonrpc-core-client = { version = "14.0.5", features = ["tls", "http"] }
async-std = "1.4.0"
tokio-compat = "0.1.4"
tokio_01 = { version = "0.1.22", package = "tokio" }
reqwest = { version = "0.10", features = ["json", "rustls-tls"] }
rust-crypto = "^0.2"
ctrlc = { version = "3.1.3", features = ["termination"] }
bs58 = "0.3.0"
console = "0.9.2"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.3"
features = ["serde"]

[lib]
name = "summercash"
path = "src/lib.rs"

[[bin]]
name = "smcd"
path = "src/cmd/smcd.rs"

[[bin]]
name = "smcli"
path = "src/cmd/smcli.rs"
